Update to be a pibunny repo
Remove showmewebcam specific things and add some

pibunny specific things.

thought this would be working as a usb gadget by

now, but apparently no joy.

--- a/board/genimage-raspberrypi0w.cfg
+++ b/board/genimage-raspberrypi0w.cfg
@@ -8,12 +8,19 @@ image boot.vfat {
       "rpi-firmware/fixup.dat",
       "rpi-firmware/start.elf",
       "rpi-firmware/overlays",
-      "camera.txt",
-      "enable-serial-debug",
       "zImage"
     }
   }
   size = 16M
+}
+
+image storage.vfat {
+  vfat {
+    files = {
+      "rpi-firmware/config.txt"
+    }
+  }
+  size = 1G
 }
 
 image sdcard.img {
@@ -29,5 +36,10 @@ image sdcard.img {
   partition rootfs {
     partition-type = 0x83
     image = "rootfs.squashfs"
+  }
+
+  partition storage {
+    partition-type = 0xC
+    image = "storage.vfat"
   }
 }
