--- a/configs/config
+++ b/configs/config
@@ -3,20 +3,20 @@ BR2_arm1176jzf_s=y
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
 BR2_KERNEL_HEADERS_5_4=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
-BR2_TARGET_GENERIC_HOSTNAME="piwebcam"
-BR2_TARGET_GENERIC_ISSUE="Your webcam at your service!"
+BR2_TARGET_GENERIC_HOSTNAME="pibunny"
+BR2_TARGET_GENERIC_ISSUE="pi bunny"
 BR2_INIT_SYSTEMD=y
 BR2_TARGET_GENERIC_ROOT_PASSWD="root"
 BR2_TARGET_GENERIC_GETTY_PORT="ttyAMA0"
-BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_PICAM_PATH)/rootfs"
-BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_PICAM_PATH)/board/post-build.sh"
-BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_PICAM_PATH)/board/post-image.sh"
-BR2_ROOTFS_POST_SCRIPT_ARGS="--configure-picam"
+BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_PIBUNNY_PATH)/rootfs"
+BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_PIBUNNY_PATH)/board/post-build.sh"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_PIBUNNY_PATH)/board/post-image.sh"
+BR2_ROOTFS_POST_SCRIPT_ARGS="--configure-pibunny"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="$(call github,raspberrypi,linux,c5e512a329ac7a0bfdd5f53477f4300723618db5)/linux-c5e512a329ac7a0bfdd5f53477f4300723618db5.tar.gz"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
-BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_PICAM_PATH)/board/linux.config"
+BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_PIBUNNY_PATH)/board/linux.config"
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
 BR2_LINUX_KERNEL_LZ4=y
@@ -41,6 +41,7 @@ BR2_TARGET_ROOTFS_SQUASHFS4_LZ4=y
 BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_PACKAGE_HOST_GENIMAGE=y
 BR2_PACKAGE_HOST_MTOOLS=y
-BR2_PACKAGE_PIWEBCAM=y
-BR2_PACKAGE_CAMERA_CONTROL=y
-BR2_LINUX_KERNEL_PATCH="$(BR2_EXTERNAL_PICAM_PATH)/patches/linux-custom"
+BR2_PACKAGE_PYTHON3=y
+BR2_PACKAGE_PIBUNNY=y
+BR2_PACKAGE_PYTHON_BLINKT=y
+BR2_PACKAGE_PYTHON_RPIGPIO=y
