--- a/board/genimage-raspberrypi0w.cfg
+++ b/board/genimage-raspberrypi0w.cfg
@@ -14,14 +14,14 @@ image boot.vfat {
   size = 16M
 }
 
-image storage.vfat {
-  vfat {
-    files = {
-      "rpi-firmware/config.txt"
-    }
-  }
-  size = 1G
-}
+# image storage.vfat {
+#   vfat {
+#     files = {
+#       "rpi-firmware/config.txt"
+#     }
+#   }
+#   size = 1G
+# }
 
 image sdcard.img {
   hdimage {
@@ -38,8 +38,8 @@ image sdcard.img {
     image = "rootfs.squashfs"
   }
 
-  partition storage {
+  partition udisk {
     partition-type = 0xC
-    image = "storage.vfat"
+    image = "udisk.vfat"
   }
 }
