--- a/Config.in
+++ b/Config.in
@@ -1,3 +1,4 @@
 source "$BR2_EXTERNAL_PIBUNNY_PATH/package/pibunny/Config.in"
+source "$BR2_EXTERNAL_PIBUNNY_PATH/package/rspiducky/Config.in"
 source "$BR2_EXTERNAL_PIBUNNY_PATH/package/python-blinkt/Config.in"
 source "$BR2_EXTERNAL_PIBUNNY_PATH/package/python-rpigpio/Config.in"
