--- a/configs/config
+++ b/configs/config
@@ -11,7 +11,7 @@ BR2_TARGET_GENERIC_GETTY_PORT="ttyAMA0"
 BR2_ROOTFS_OVERLAY="$(BR2_EXTERNAL_PIBUNNY_PATH)/rootfs"
 BR2_ROOTFS_POST_BUILD_SCRIPT="$(BR2_EXTERNAL_PIBUNNY_PATH)/board/post-build.sh"
 BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BR2_EXTERNAL_PIBUNNY_PATH)/board/post-image.sh"
-BR2_ROOTFS_POST_SCRIPT_ARGS="--configure-pibunny"
+BR2_ROOTFS_POST_SCRIPT_ARGS="--configure-pibunny --provision-udisk"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL=y
 BR2_LINUX_KERNEL_CUSTOM_TARBALL_LOCATION="$(call github,raspberrypi,linux,c5e512a329ac7a0bfdd5f53477f4300723618db5)/linux-c5e512a329ac7a0bfdd5f53477f4300723618db5.tar.gz"
@@ -41,7 +41,11 @@ BR2_TARGET_ROOTFS_SQUASHFS4_LZ4=y
 BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_PACKAGE_HOST_GENIMAGE=y
 BR2_PACKAGE_HOST_MTOOLS=y
+BR2_PACKAGE_BASH=y
+BR2_PACKAGE_DHCP=y
+BR2_PACKAGE_DHCP_SERVER=y
 BR2_PACKAGE_PYTHON3=y
 BR2_PACKAGE_PIBUNNY=y
+BR2_PACKAGE_RSPIDUCKY=y
 BR2_PACKAGE_PYTHON_BLINKT=y
 BR2_PACKAGE_PYTHON_RPIGPIO=y
