--- a/configs/config
+++ b/configs/config
@@ -20,6 +20,7 @@ BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="$(BR2_EXTERNAL_PIBUNNY_PATH)/board/linux.co
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
 BR2_LINUX_KERNEL_LZ4=y
+BR2_INSTALL_LIBSTDCPP=y
 BR2_PACKAGE_RPI_FIRMWARE=y
 BR2_PACKAGE_RPI_FIRMWARE_X=y
 BR2_PACKAGE_LIBV4L=y
@@ -44,6 +45,7 @@ BR2_PACKAGE_HOST_MTOOLS=y
 BR2_PACKAGE_BASH=y
 BR2_PACKAGE_DHCP=y
 BR2_PACKAGE_DHCP_SERVER=y
+BR2_PACKAGE_NMAP=y
 BR2_PACKAGE_PYTHON3=y
 BR2_PACKAGE_PIBUNNY=y
 BR2_PACKAGE_RSPIDUCKY=y
