--- a/package/pibunny/pibunny.service
+++ b/package/pibunny/pibunny.service
@@ -3,6 +3,8 @@ Description=Configure Raspberry Pi as a pibunny
 
 [Service]
 ExecStart=/usr/bin/env python3 /opt/pibunny/pibunny.py
+StandardOutput=journal+console
+StandardError=journal+console
 SyslogIdentifier=pibunny
 WorkingDirectory=/opt/pibunny
 
